--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <label for="taskPickupTimeInput">Pickup Time:</label>
             <input type="time" id="taskPickupTimeInput" />
         </div>
+        <button class="close-btn" onclick="closeAddTaskModal()">Close</button>
         <button class="add-btn" onclick="addTask()">Add</button>
     </div>
 </div>
