--- a/code copy.html
+++ b/code copy.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="home.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task Manager</title>
+  <title>Z-EVENT PLANER</title>
   <link rel="stylesheet" href="code.css">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
