--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="home.css">
+ 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Z-EVENT PLANER</title>
   <link rel="stylesheet" href="code.css">
-  <link rel="shortcut icon" href="Add a .ico" type="image/x-icon">
+  <link rel="shortcut icon" href="Z logo.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -16,6 +16,15 @@
     <center>
       <h1 class="h1">Task Manager</h1>
     </center>
+    <nav>
+      <ul>
+        <li><a href="web.html">Websites</a></li>
+
+        <li><a href="index.html">Event Planer</a></li>
+ 
+ 
+      </ul>
+    </nav>
   </header>
 
   <div id="app" class="left-cont">
