--- a/web.html
+++ b/web.html
@@ -30,10 +30,58 @@
     <main>
 
         <section class="web-sec">
-
+<div>
             <ul class="website-list">
                 <li>
                     <h2>Mattis Cohen Art</h2>
+                    <a href="https://mattiscohenart.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Completed</span>
+                </li>
+                <li>
+                    <h2>כיתה ז`1</h2>
+                    <a href="https://zachberger1.github.io/Class-Web/" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+                <li>
+                    <h2>Website 3</h2>
+                    <a href="https://website3.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+                <li>
+                    <h2>Website 3</h2>
+                    <a href="https://website3.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul class="website-list">
+                <li>
+                    <h2>Mattis Cohen Art</h2>
+                    <a href="https://mattiscohenart.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Completed</span>
+                </li>
+                <li>
+                    <h2>Picture On Stage</h2>
+                    <a href="https://zachberger1.github.io/picture-on-stage/index.html" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+                <li>
+                    <h2>Website 3</h2>
+                    <a href="https://website3.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+                <li>
+                    <h2>Website 3</h2>
+                    <a href="https://website3.com" class="website-link" target="_blank">Click Me!</a>
+                    <span class="status">Incomplete</span>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul class="website-list">
+                <li>
+                    <h2>website 2</h2>
                     <a href="https://mattiscohenart.com" class="website-link" target="_blank">Click Me!</a>
                     <span class="status">Completed</span>
                 </li>
@@ -53,10 +101,11 @@
                     <span class="status">Incomplete</span>
                 </li>
             </ul>
+        </div>
         </section>
 
 
-        
+
     </main>
     <script src="code.js"></script>
 </body>
