--- a/web.html
+++ b/web.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="web.html">Websites</a></li>
-
+                <li><a href="BB.html">BB</a></li>
                 <li><a href="index.html">Event Planner</a></li>
 
 
