--- a/BB.html
+++ b/BB.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<img src="assets/img/BB1.jpg" alt="" class="backgroundimg">
     <header class="header">
         <img src="assets/img/logo.ico" alt="" class="img">
         <center>
