--- a/BB.html
+++ b/BB.html
@@ -12,6 +12,7 @@
 
 <body>
 <img src="assets/img/BB1.jpg" alt="" class="backgroundimg">
+<img src="assets/img/BI.jpg" alt="" class="backgroundimga">
     <header class="header">
         <img src="assets/img/logo.ico" alt="" class="img">
         <center>
