--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Z-EVENT PLANER</title>
   <link rel="stylesheet" href="code.css">
-  <link rel="shortcut icon" href="Z logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="Z-Logo.ico" type="image/x-icon">
 </head>
 
 <body>
